--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -2,7 +2,8 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
 
-@import "~font-awesome/scss/font-awesome.scss";
+@fa-font-path:"/fonts";
+@import '~font-awesome/scss/font-awesome.scss';
 // Variables
 @import "variables";
 
